[gd_scene load_steps=16 format=2]

[ext_resource path="res://Target.gd" type="Script" id=1]
[ext_resource path="res://FaceTarget.gd" type="Script" id=2]
[ext_resource path="res://GunTurret.gd" type="Script" id=3]
[ext_resource path="res://VisionManager.gd" type="Script" id=4]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 200, 2, 200 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.709804, 0.968627, 0.560784, 1 )

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( -100, 1, 100, 100, 1, 100, -100, -1, 100, 100, 1, 100, 100, -1, 100, -100, -1, 100, 100, 1, -100, -100, 1, -100, 100, -1, -100, -100, 1, -100, -100, -1, -100, 100, -1, -100, 100, 1, 100, 100, 1, -100, 100, -1, 100, 100, 1, -100, 100, -1, -100, 100, -1, 100, -100, 1, -100, -100, 1, 100, -100, -1, -100, -100, 1, 100, -100, -1, 100, -100, -1, -100, 100, 1, 100, -100, 1, 100, 100, 1, -100, -100, 1, 100, -100, 1, -100, 100, 1, -100, -100, -1, 100, 100, -1, 100, -100, -1, -100, 100, -1, 100, 100, -1, -100, -100, -1, -100 )

[sub_resource type="SphereMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.866667, 0, 0, 1 )

[sub_resource type="SphereShape" id=6]

[sub_resource type="CubeMesh" id=7]

[sub_resource type="SpatialMaterial" id=8]

[sub_resource type="SpatialMaterial" id=9]
albedo_color = Color( 0, 0.27451, 1, 1 )

[sub_resource type="CubeMesh" id=10]

[sub_resource type="ConcavePolygonShape" id=11]
data = PoolVector3Array( -1, 1, 1, 1, 1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, -1, 1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, -1, -1, 1, 1, 1, 1, 1, -1, 1, -1, 1, 1, 1, -1, 1, -1, -1, 1, -1, 1, -1, 1, -1, -1, 1, 1, -1, -1, -1, -1, 1, 1, -1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, 1, 1, 1, -1, -1, 1, 1, -1, 1, -1, 1, 1, -1, -1, -1, 1, 1, -1, 1, -1, -1, -1, 1, -1, 1, 1, -1, -1, -1, -1, -1 )

[node name="World" type="Spatial"]

[node name="Ground" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -39 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="StaticBody" type="StaticBody" parent="Ground"]

[node name="CollisionShape" type="CollisionShape" parent="Ground/StaticBody"]
shape = SubResource( 3 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.85522, 0.259133, -0.448831, 0, 0.866025, 0.5, 0.518266, -0.42761, 0.740642, -41.7589, 43.4245, 57.7467 )
current = true
far = 1000.0

[node name="Camera2" type="Camera" parent="."]
transform = Transform( 0.0549835, -0.0119046, 0.998416, 0.0226167, 0.999687, 0.0106743, -0.998231, 0.021994, 0.0552355, 113.616, 14.8267, -1.03138 )
far = 1000.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 0.965926, 0.183013, -0.183013, 0, 0.707107, 0.707107, 0.258819, -0.683013, 0.683013, 0, 0, 0 )
shadow_enabled = true

[node name="Target" type="KinematicBody" parent="." groups=[
"targets",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 20, 21, -56 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="Target"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Target"]
shape = SubResource( 6 )

[node name="GunTurret" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 28 )
script = ExtResource( 3 )

[node name="Timer" type="Timer" parent="GunTurret"]
wait_time = 0.2
autostart = true

[node name="FaceTargetY" type="Spatial" parent="GunTurret"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="GunTurret/FaceTargetY"]
transform = Transform( 2.4, 0, 0, 0, 2.4, 0, 0, 0, 2.4, 0, -2.24481, 0 )
mesh = SubResource( 7 )
material/0 = SubResource( 8 )

[node name="FaceTargetX" type="Spatial" parent="GunTurret/FaceTargetY"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
script = ExtResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="GunTurret/FaceTargetY/FaceTargetX"]
transform = Transform( -4.98833e-08, 1.1412, 0, -1.1412, -4.98833e-08, 0, 0, 0, 4.98134, 0, 0, -3.81398 )
mesh = SubResource( 7 )
material/0 = SubResource( 9 )

[node name="FirePoint" type="Spatial" parent="GunTurret/FaceTargetY/FaceTargetX"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, -8.76351 )

[node name="VisionManager" type="Spatial" parent="GunTurret"]
script = ExtResource( 4 )

[node name="Wall" type="MeshInstance" parent="."]
transform = Transform( 6.08688, 0, 0, 0, 23.5712, 0, 0, 0, 6.08688, -17.8328, 7.38954, -42.9865 )
visible = false
mesh = SubResource( 10 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Wall"]

[node name="CollisionShape" type="CollisionShape" parent="Wall/StaticBody"]
shape = SubResource( 11 )
disabled = true

[connection signal="timeout" from="GunTurret/Timer" to="GunTurret" method="fire"]
